changed most instances of 'Random Wheel' to 'The Wheel of Misfortune'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#1f2937" />
     <meta name="description" content="A customizable spinning wheel for random decision making" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <title>Random Wheel</title>
+    <title>The Wheel of Misfortune</title>
   </head>
   <body>
     <div id="root"></div>
