--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Random Wheel</title>
+    <title>The Wheel of Misfortune</title>
     <script>
       // Single Page App redirect for GitHub Pages
       // Redirects all 404s to index.html with the path preserved in sessionStorage
